Bug 471548 - Auto-Update for flatpaks via Discover appears to be non-functional
Summary: Auto-Update for flatpaks via Discover appears to be non-functional
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: 5.27.6
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 472908 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-06-28 21:04 UTC by Shawn W Dunn
Modified: 2024-11-06 22:11 UTC (History)
14 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.4
Sentry Crash Report:


Attachments
logs of manual run of plasma-discover-update via journalctl (2.37 KB, text/plain)
2023-06-28 21:04 UTC, Shawn W Dunn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Shawn W Dunn 2023-06-28 21:04:45 UTC
Created attachment 159962 [details]
logs of manual run of plasma-discover-update via journalctl

SUMMARY
On openSUSE Kalpa, we only use Discover to handle the installation and management of flatpaks and fwupd, setting Updates to run Automatically in the "Software Update" kcm appears to work fine for fwupd, but is non-functional for flatpak/flathub

STEPS TO REPRODUCE
1. Enable flathub repository
2. Install some flatpaks
3. Set to automatically update software daily in the "Software Update" kcm

OBSERVED RESULT
Flatpaks do not get updated automatically.   The Notification that updates are available works just fine, but there is no automatic download and installation of them.

EXPECTED RESULT
Discover checks for updates of flatpaks from enabled repositories, downloads, and installs them, on a daily schedule

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Kalpa 20230625 (Linux 6.3.9-1-default)
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.107.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
Running `plasma-discover-update` manually in a terminal produces the expected output.  Please see attached logs.
Comment 1 Nate Graham 2023-08-02 20:49:31 UTC
*** Bug 472908 has been marked as a duplicate of this bug. ***
Comment 2 Vinícius 2024-08-19 13:30:41 UTC
it's the same issue here too but plasma-discover-update don't update anything 

Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.10.3-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5700U with Radeon Graphics
Memory: 7,1 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: LENOVO
Product Name: 82MF
System Version: IdeaPad 3 15ALC6
Comment 3 Unknown 2024-09-11 16:44:40 UTC
I also have this same issue with multiple clients who use fedora, having wanted to move away from windows.

I have downloaded and install enabled, but they don't actually download and install, only notify there is an update. Many tech illiterate people and those that don't understand updates won't even know about doing updates, especially if they are used to windows doing updates automatically for them.

This could result in security updates and bug fixes being missed out.
Comment 4 Vinícius 2024-09-11 22:12:22 UTC
(In reply to Jack from comment #3)
> I also have this same issue with multiple clients who use fedora, having
> wanted to move away from windows.
> 
> I have downloaded and install enabled, but they don't actually download and
> install, only notify there is an update. Many tech illiterate people and
> those that don't understand updates won't even know about doing updates,
> especially if they are used to windows doing updates automatically for them.
> 
> This could result in security updates and bug fixes being missed out.

as a workaround for your issue you can make a systemd script to automatically update the flatpaks, it's not ideal yes, but better than missing security updates before this get fixed
Comment 5 Nate Graham 2024-09-16 14:29:53 UTC
*** Bug 447245 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2024-10-25 09:32:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/960
Comment 7 Harald Sitter 2024-11-05 14:11:02 UTC
Git commit c772b13638ce1abfb6de7ba735cbd42e3cac2d35 by Harald Sitter.
Committed on 05/11/2024 at 13:55.
Pushed by sitter into branch 'master'.

update: disable quitting on eventloop locker

KNS (for instance) uses KJobs and KJobs have eventloop lockers and those
lockers cause the application to quit when the last locker disappears
(i.e. job finishes). this is before we have finished our work so the
updater ended up broken.

M  +5    -0    update/main.cpp

https://invent.kde.org/plasma/discover/-/commit/c772b13638ce1abfb6de7ba735cbd42e3cac2d35
Comment 8 Harald Sitter 2024-11-05 14:25:11 UTC
Git commit 78cce3a269bbbe3f7b41755a20561426e68f8559 by Harald Sitter.
Committed on 05/11/2024 at 14:11.
Pushed by sitter into branch 'Plasma/6.2'.

update: disable quitting on eventloop locker

KNS (for instance) uses KJobs and KJobs have eventloop lockers and those
lockers cause the application to quit when the last locker disappears
(i.e. job finishes). this is before we have finished our work so the
updater ended up broken.


(cherry picked from commit c772b13638ce1abfb6de7ba735cbd42e3cac2d35)

Co-authored-by: Harald Sitter <sitter@kde.org>

M  +5    -0    update/main.cpp

https://invent.kde.org/plasma/discover/-/commit/78cce3a269bbbe3f7b41755a20561426e68f8559
Comment 9 John 2024-11-06 16:00:38 UTC
(In reply to Harald Sitter from comment #8)
> Git commit 78cce3a269bbbe3f7b41755a20561426e68f8559 by Harald Sitter.
> Committed on 05/11/2024 at 14:11.
> Pushed by sitter into branch 'Plasma/6.2'.
> 
> update: disable quitting on eventloop locker

Any idea if this will also fix (or, at least, is related to) bug 447245 ?
Comment 10 Nate Graham 2024-11-06 22:11:39 UTC
The part of that bug that was about Flatpaks at least, yeah.