update: disable quitting on eventloop locker

KNS (for instance) uses KJobs and KJobs have eventloop lockers and those
lockers cause the application to quit when the last locker disappears
(i.e. job finishes). this is before we have finished our work so the
updater ended up broken.

BUG: 471548


(cherry picked from commit c772b13638ce1abfb6de7ba735cbd42e3cac2d35)

Co-authored-by: Harald Sitter <sitter@kde.org>